nobase_pkginclude_HEADERS = InterTaskMessage.h MessageRouting.h PlatformAPI.h PlatformCommonClass.h \
                            PlatformCommonEnums.h PlatformCommonMacros.h PlatformEvent.h PlatformMemoryManagment.h \
							PlatformModule.h PlatformMutex.h PlatformTimer.h \
							Linux/LinuxSpecificHeaders.h Linux/PlatformEvent_Linux.h Linux/PlatformModule_Linux.h \
							Linux/PlatformMutex_Linux.h Linux/WaitableTimingObject_Linux.h 


							
